src/objects/CQA_Summary__c/CQA_Summary__c.object-meta.xml
<CustomObject>
    <description>Object used in case quality assessment module. 
This object stores the summary of assessment results after the evaluation of case.</description>
    <label>Quality Assessment</label>
    <nameField>
        <label>QA Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>