src/objects/CQA_Summary__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quality Assessments</relationshipLabel>
    <relationshipName>Quality_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>