src/objects/CQA_Summary__c/fields/CQI_Score_Change_Count__c.field-meta.xml
<CustomField>
    <fullName>CQI_Score_Change_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to track the number of times the CQI Score has been modified.</description>
    <label>CQI Re-Evaluation Score Change Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>