src/objects/CQA_Summary__c/fields/QA_Eval_Case__c.field-meta.xml
<CustomField>
    <fullName>QA_Eval_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>QA Evaluation Cases</relationshipLabel>
    <relationshipName>Case_Evaluation_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>