src/objects/CQA_Summary__c/fields/QA_Eval_No_of_case_evaluation_suggested__c.field-meta.xml
<CustomField>
    <fullName>QA_Eval_No_of_case_evaluation_suggested__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Case evaluations assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>