src/objects/CQA_Summary__c/fields/QA_Eval_Recommended_Date__c.field-meta.xml
<CustomField>
    <fullName>QA_Eval_Recommended_Date__c</fullName>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>