src/objects/CQA_Summary__c/fields/QA_Eval_Task_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>QA_Eval_Task_Assigned_To__c</fullName>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>