src/objects/CQA_Summary__c/fields/QA_Eval_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>QA_Eval_Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>