src/objects/CQA_Summary__c/fields/QA_Evaluation_Suggestion_Parent__c.field-meta.xml
<CustomField>
    <fullName>QA_Evaluation_Suggestion_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Suggestion (Case)</label>
    <referenceTo>CQA_Summary__c</referenceTo>
    <relationshipLabel>Cases for evaluation</relationshipLabel>
    <relationshipName>Case_Evaluation_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>