src/objects/CQA_Summary__c/recordTypes/Call_Quality_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Call_Quality_Assessment</fullName>
    <active>true</active>
    <description>Record type for call quality assessments created for each Call Task related to case.</description>
    <label>Call Quality Assessment</label>
</RecordType>