src/objects/CQA_Summary__c/recordTypes/KPI_Assessment.recordType-meta.xml
<RecordType>
    <fullName>KPI_Assessment</fullName>
    <active>true</active>
    <description>Record type for case quality assessments created for case records.</description>
    <label>Case Quality Assessment</label>
</RecordType>