src/objects/CQA_Summary__c/recordTypes/QA_Eval_Parent_Summary.recordType-meta.xml
<RecordType>
    <fullName>QA_Eval_Parent_Summary</fullName>
    <active>true</active>
    <label>Parent Summary</label>
</RecordType>