src/objects/CQA_Summary__c/recordTypes/QA_Eval_Related_Case_Call.recordType-meta.xml
<RecordType>
    <fullName>QA_Eval_Related_Case_Call</fullName>
    <active>true</active>
    <label>Related Case/Call</label>
</RecordType>