src/objects/CQA_Summary__c/recordTypes/Self_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Self_Assessment</fullName>
    <active>true</active>
    <description>Record type used by Case owners to perform self assessments.</description>
    <label>Case Quality Self-Assessment</label>
</RecordType>