src/objects/CQA_Summary__c/recordTypes/Self_Assessment_Call.recordType-meta.xml
<RecordType>
    <fullName>Self_Assessment_Call</fullName>
    <active>true</active>
    <description>Record type used by Call Task Assigned Owners to perform self assessment.</description>
    <label>Call Quality Self-Assessment</label>
</RecordType>