src/objects/CQA_Summary__c/validationRules/Assessment_Cannot_be_Updated_30_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Assessment_Cannot_be_Updated_30_days</fullName>
    <active>true</active>
    <description>Validation rule to prevent update to Assessment records, after 30 days from the Evaluation date.</description>
    <errorConditionFormula>AND (
 TODAY() - DATEVALUE( Date_Time_of_the_Evaluation__c ) &gt; 30, 
 OR (
  RecordType.DeveloperName = &apos;KPI_Assessment&apos;,
  RecordType.DeveloperName = &apos;Call_Quality_Assessment&apos;
 )
)</errorConditionFormula>
    <errorMessage>Quality Assessment cannot be updated after 30 days from Evaluation date.</errorMessage>
</ValidationRule>