src/objects/CQA_Summary__c/validationRules/CQ_Score_cannot_be_greater_100.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_Score_cannot_be_greater_100</fullName>
    <active>true</active>
    <description>Validation rule to prevent any assessment score crossing 100.</description>
    <errorConditionFormula>Assessment_Score__c &gt; 100</errorConditionFormula>
    <errorMessage>Assessment Score cannot be greater than 100.</errorMessage>
</ValidationRule>