src/objects/CQA_Summary__c/validationRules/Mandate_Reason_for_Not_to_be_Evaluated.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Reason_for_Not_to_be_Evaluated</fullName>
    <active>true</active>
    <description>Validation rule to enforce users to select a reason, when Not to be evaluated is set to true.</description>
    <errorConditionFormula>AND (
NOT ( ISNEW() ),
QA_Eval_Not_Evaluated__c ,
ISBLANK( TEXT ( QA_Eval_Reason__c ) )

)</errorConditionFormula>
    <errorDisplayField>QA_Eval_Reason__c</errorDisplayField>
    <errorMessage>Please select a Reason</errorMessage>
</ValidationRule>