src/objects/CQA_Summary__c/validationRules/Only_Manager_QAA_can_create_CQI.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Manager_QAA_can_create_CQI</fullName>
    <active>true</active>
    <description>Validation rule to prevent creation of CQI assessment records, if the current user is not case owner&apos;s manager or QAA user.</description>
    <errorConditionFormula>AND (
 OR (
  ISNEW(),
  ISCHANGED (  Assessment_Score__c  ) 
 ),
 $User.Id &lt;&gt;  Agent_Name__r.ManagerId , 
 $User.Id &lt;&gt;  Agent_Name__r.CQI_Coach_User__c , 
 OR (
  RecordType.DeveloperName = &apos;KPI_Assessment&apos; , 
  RecordType.DeveloperName = &apos;Call_Quality_Assessment&apos;
 )
)</errorConditionFormula>
    <errorMessage>CQI Assessments can be created only by case owner&apos;s active primary manager or assigned QAA agent.</errorMessage>
</ValidationRule>