src/objects/CQA_Summary__c/validationRules/Only_Primary_Manager_Can_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Primary_Manager_Can_Update</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
 NOT (ISNEW()), 
 CQI_Score_Tracked__c &lt;&gt; null , 
 ISCHANGED (  Assessment_Score__c ) , 
 $User.Id &lt;&gt;  Agent_Manager__c 
)</errorConditionFormula>
    <errorMessage>Only Primary Managers can update the KPI Assessment Score</errorMessage>
</ValidationRule>