src/objects/CQA_Summary__c/validationRules/Only_Two_ReEvaluation_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Two_ReEvaluation_Allowed</fullName>
    <active>true</active>
    <description>Validation rule to prevent more than 2 re-evaluation by Primary Managers for the same assessment.</description>
    <errorConditionFormula>AND (
 CQI_Score_Change_Count__c &gt; 2 , 
 OR (
 RecordType.DeveloperName = &apos;KPI_Assessment&apos;,
 RecordType.DeveloperName = &apos;Call_Quality_Assessment&apos;
 )
)</errorConditionFormula>
    <errorMessage>This CQI assessment has been re-evaluated twice. It cannot be re-evaluated again.</errorMessage>
</ValidationRule>