src/objects/CQA_Summary__c/validationRules/Prevent_Not_Evaluated_If_QA_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Not_Evaluated_If_QA_Completed</fullName>
    <active>true</active>
    <description>Validation rule to prevent the user from selecting &quot;Not to be Evaluated&quot; checkbox, if an Assessment is already completed.</description>
    <errorConditionFormula>AND (
NOT ( ISNEW() ),
ISCHANGED ( QA_Eval_Reason__c ), 
OR (
QA_Eval_Not_Evaluated__c ,
NOT ( ISBLANK (  TEXT ( QA_Eval_Reason__c ) ) ) 
),
NOT ( ISBLANK(  QA_Eval_Related_Case_Assessment__c  ) ), 
RecordType.DeveloperName = &apos;QA_Eval_Related_Case_Call&apos;

)</errorConditionFormula>
    <errorDisplayField>QA_Eval_Not_Evaluated__c</errorDisplayField>
    <errorMessage>Quality Assessment is completed for this case/call. Please uncheck Not to be evaluated &amp; clear reason field.</errorMessage>
</ValidationRule>