src/objects/CQA_Summary__c/validationRules/Prevent_Update_On_AutoNumber_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update_On_AutoNumber_Name</fullName>
    <active>true</active>
    <description>Validation rule to prevent updating on Name field, which as pre-assigned auto numbers</description>
    <errorConditionFormula>AND (

 ISCHANGED ( Name ) , 

 Prevent_Update_on_Auto_Number__c 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Auto Generated Number cannot be updated</errorMessage>
</ValidationRule>