src/objects/CQA_Summary__c/listViews/All_QA_Evaluation_Suggestions.listView-meta.xml
<ListView>
    <fullName>All_QA_Evaluation_Suggestions</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>QA_Eval_Recommended_Date__c</columns>
    <columns>QA_Eval_No_of_case_evaluation_suggested__c</columns>
    <columns>QA_Eval_No_of_call_evaluation_suggested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CQA_Summary__c.QA_Eval_Parent_Summary</value>
    </filters>
    <label>All QA Evaluation Suggestions</label>
</ListView>